--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -2,9 +2,9 @@
 
 <h1>Buscar Séries</h1>
 
-<%= search_form_for @series do |f| %>
-  <%= f.label :name_serie_cont, "NOME:" %>
-  <%= f.search_field :name_serie_cont %>
+<%= search_form_for @search do |f| %>
+  <%= f.label :name_cont, "NOME:" %>
+  <%= f.search_field :name_cont %>
   <%= f.submit %>
 <% end %>
 
