--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -18,11 +18,11 @@
   <%= f.label :subtitle_eq, "LEGENDAS" %>
   <%= f.select :subtitle_eq, options_for_select([['Sim', 't'], ['Não', 'f']]), include_blank: 'Possui Legendas'%>
 
-  <%= f.label :created_at_gteq, "INICIO" %>
-  <%= f.search_field :created_at_gteq %>
+  <%= f.label :created_at_beginning_of_day_gteq, "INICIO" %>
+  <%= f.search_field :created_at_beginning_of_day_gteq %>
 
-  <%= f.label :created_at_lteq, "FIM" %>
-  <%= f.search_field :created_at_lteq %>
+  <%= f.label :created_at_end_of_day_lt, "FIM" %>
+  <%= f.search_field :created_at_end_of_day_lt %>
   
 
   <%= f.submit %>
